# FPI_final

./: Cargo.toml  README.md
img_segments/: polygons.tif  segments.tif
src/: app.rs  camouflage.rs  graphs.rs  helpers.rs  main.rs  quantization.rs  segmentation.rs
src/app/: foreground.rs  image_wrapper.rs  my_menu.rs
src/segmentation/: centroid.rs  connection.rs  overlapping.rs
