[package]
name = "FPI_final"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.21.3"
egui = "0.21.0"
egui_extras = "0.21.0"
image = "0.24.5"
ordered-float = "3.4.0"
petgraph = "0.6.3"
rfd = "0.11.2"
